# i18n-translator

./: CHANGELOG.md  LICENSE  README.md  about.html  components.json  index.html  package-lock.json  package.json  settings.html  tsconfig.json  tsconfig.scripts.json  vite.config.ts
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: arm-publish.yml  build.yml  publish.yml  test-build.yml
docs/: CONTRIBUTING.md  README.md  faq.md  installation.md  translation.md  troubleshooting.md  usage.md
public/: lang-list.json
scripts/: missing-keys.ts
src/: App.css  App.tsx  about.tsx  main.tsx  routes.tsx  settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: about.json  default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/helpers/: file_system.rs  json.rs  mod.rs  resx.rs  xliff.rs  xml_android.rs  xml_desktop.rs
src-tauri/src/translator/: file_system.rs
src-tauri/src/types/: enums.rs  mod.rs  structs.rs
src/@types/: i18next.d.ts
src/actions/: edit.ts  fetcher.ts  file-system.ts  file.ts  find.ts  translator.ts  view.ts
src/components/: command-item.tsx  input.tsx  lang-icon.tsx  lang-input.tsx  lang-selector.tsx  loading-button.tsx  main.tsx  quick-access.tsx  themes.tsx  tree-sidebar.tsx  window.tsx
src/contents/: about-details.tsx  add-to-glossary.tsx  auto-translate.tsx  batch-rename-keys.tsx  command.tsx  find.tsx  glossary-manager.tsx  main.tsx  new-translation.tsx  open-translation.tsx  open-xliff.tsx  updater.tsx  (+2 more)
(+269 files in other folders)
