[package]
name = "i18n-translator"
version = "0.3.0"
description = "A Universal Translator that helps you localize and translate some apps into your native language. Perfect for dev-translators localizing the app!"
authors = ["ArsenTech"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "i18n_content_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2.7.1"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
specta = "=2.0.0-rc.22"
tauri-plugin-store = "2"
quick-xml = "0.40.1"
tauri-plugin-fs = "2"
